Refactor checklist doctype names and remove unused files
- Updated the naming convention for various checklist doctypes from "Service Protocol ..." to "Checklist of ...".
- Removed obsolete files related to the "Inverter Checklist Connected Batteries Table", "Service Protocol - Applied Solution", and other service protocol checklists.
- Adjusted JSON and TypeScript files to reflect the new naming conventions.
- Updated translation files to match the new checklist names.

--- a/frappe_growatt_checklists/translations/pt-BR.csv
+++ b/frappe_growatt_checklists/translations/pt-BR.csv
@@ -247,7 +247,7 @@ Serial Number,Número de Série
 Series,Série
 Service Partner,Parceiro de Serviço
 Initial Analysis,Análise Inicial
-Service Protocol EV Charger Checklist,Checklist de Carregador EV do Protocolo de Atendimento
+Checklist of EV Charger,Checklist de Carregador EV do Protocolo de Atendimento
 Initial Analysis Reference,Referência da Análise Inicial
 Side and Location Where CTs Were Installed,Lado e Localização Onde os TCs Foram Instalados
 Single Phase,Monofásico
