feat: Atualizar textos dos botões de adicionar no checklist de inversores e adicionar traduções correspondentes

--- a/frappe_growatt_checklists/translations/pt-BR.csv
+++ b/frappe_growatt_checklists/translations/pt-BR.csv
@@ -34,6 +34,9 @@ AC Power,Potência AC
 AC Voltage L1,Tensão AC L1
 AC Voltage L2,Tensão AC L2
 AC Voltage L3,Tensão AC L3
+Add Battery,Adicionar Bateria
+Add Photo,Adicionar Foto
+Add Video,Adicionar Vídeo
 Additional Information,Informações Adicionais
 Address,Endereço
 Amended From,Alterado De
